Delay removing damage rect by one frame for underlays.

When we detect that an underlay is unoccluded, we would previously
consider removing its damage rect if it hadn't moved.  However, this
can cause problems if the underlay was occluded on the previous
frame, since we still need to erase whatever disappeared above it
from the framebuffer.

This CL requires that an underlay is unoccluded for one frame before
removing its damage rect.

Bug: 875879
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I00394c6d6f61c4381a97a6c753c8840485163845
Reviewed-on: https://chromium-review.googlesource.com/1211202
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589969}
Former-commit-id: e515d7cf0596acfee2e1d23e8e94b2f58c431e97